--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<div class="container">
+    <img class ="title" src="imgs/popcat.svg">
+</div>
 </body>
 </html>
