--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
 <div class="container">
     <img class ="title" src="imgs/popcat.svg">
+    <div class="cat-img">15</div>
 </div>
+
 </body>
 </html>
